modify homework 9 again

--- a/Assignments/lesson-09/3_regularization.ipynb
+++ b/Assignments/lesson-09/3_regularization.ipynb
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,8 @@
     "    tf_train_labels = tf.placeholder(tf.float32,shape = (batch_size,num_labels))\n",
     "    tf_lambda = tf.placeholder(tf.float32)\n",
     "    tf_valid_dataset = tf.constant(valid_dataset)\n",
-    "    tf_valid_labels = tf.constant(valid_labels)\n",
+    "#     tf_valid_labels = tf.constant(valid_labels)\n",
+    "#     tf_valid_labels和tf_test_labels都是计算图中用不到的，没必要放在这里\n",
     "    tf_test_dataset = tf.constant(test_dataset)\n",
     "    \n",
     "    #weights and biases\n",
@@ -269,6 +270,7 @@
     "    #set nureal nerwork graph\n",
     "    lay1 = tf.nn.relu(tf.matmul(tf_train_dataset,weights1)+biases1)\n",
     "    logits = tf.matmul(lay1,weights2)+biases2\n",
+    "    #这里我们只对weights做正则，不对biases做正则。按照吴恩达老师的说法，对不对biases做正则，对结果其实没太大影响\n",
     "    loss = tf.reduce_mean(\n",
     "        tf.nn.softmax_cross_entropy_with_logits_v2(labels = tf_train_labels,logits = logits))+tf_lambda*(tf.nn.l2_loss(weights1)+tf.nn.l2_loss(weights2))\n",
     "    \n",
@@ -287,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -295,26 +297,26 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Minibatch loss at step 0: 3446.912109\n",
-      "Minibatch accuracy: 10.2%\n",
-      "Validation accuracy: 35.0%\n",
-      "Minibatch loss at step 500: 21.186182\n",
-      "Minibatch accuracy: 87.5%\n",
-      "Validation accuracy: 84.1%\n",
-      "Minibatch loss at step 1000: 0.944598\n",
-      "Minibatch accuracy: 81.2%\n",
-      "Validation accuracy: 83.1%\n",
-      "Minibatch loss at step 1500: 0.585774\n",
-      "Minibatch accuracy: 86.7%\n",
-      "Validation accuracy: 83.6%\n",
-      "Minibatch loss at step 2000: 0.612706\n",
-      "Minibatch accuracy: 90.6%\n",
-      "Validation accuracy: 83.2%\n",
-      "Minibatch loss at step 2500: 0.716420\n",
-      "Minibatch accuracy: 83.6%\n",
-      "Validation accuracy: 83.2%\n",
-      "Minibatch loss at step 3000: 0.769706\n",
+      "Minibatch loss at step 0: 3474.988770\n",
+      "Minibatch accuracy: 7.0%\n",
+      "Validation accuracy: 32.7%\n",
+      "Minibatch loss at step 500: 21.157719\n",
+      "Minibatch accuracy: 89.1%\n",
+      "Validation accuracy: 84.3%\n",
+      "Minibatch loss at step 1000: 0.949884\n",
       "Minibatch accuracy: 82.0%\n",
+      "Validation accuracy: 83.2%\n",
+      "Minibatch loss at step 1500: 0.585352\n",
+      "Minibatch accuracy: 85.2%\n",
+      "Validation accuracy: 83.7%\n",
+      "Minibatch loss at step 2000: 0.609052\n",
+      "Minibatch accuracy: 89.8%\n",
+      "Validation accuracy: 83.3%\n",
+      "Minibatch loss at step 2500: 0.716628\n",
+      "Minibatch accuracy: 82.8%\n",
+      "Validation accuracy: 83.3%\n",
+      "Minibatch loss at step 3000: 0.769080\n",
+      "Minibatch accuracy: 80.5%\n",
       "Validation accuracy: 83.4%\n",
       "Test accuracy: 90.3%\n"
      ]
@@ -365,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +381,6 @@
     "    tf_train_dataset = tf.placeholder(tf.float32,shape = (batch_size,image_size*image_size))\n",
     "    tf_train_labels = tf.placeholder(tf.float32,shape = (batch_size,num_labels))\n",
     "    tf_valid_dataset = tf.constant(valid_dataset)\n",
-    "    tf_valid_labels = tf.constant(valid_labels)\n",
     "    tf_test_dataset = tf.constant(test_dataset)\n",
     "    \n",
     "    #weights and biases\n",
@@ -399,8 +400,7 @@
     "    optimizer = tf.train.GradientDescentOptimizer(0.5).minimize(loss)\n",
     "    \n",
     "    #predict\n",
-    "    lay1_train = tf.nn.relu(tf.matmul(tf_train_dataset,weights1)+biases1)\n",
-    "    train_prediction = tf.nn.softmax(tf.matmul(lay1_train,weights2)+biases2)\n",
+    "    train_prediction = tf.nn.softmax(logits)\n",
     "    \n",
     "    lay1_valid = tf.nn.relu(tf.matmul(tf_valid_dataset, weights1) + biases1) \n",
     "    valid_prediction = tf.nn.softmax(tf.matmul(lay1_valid, weights2) + biases2)\n",
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -419,28 +419,28 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Minibatch loss at step 0: 361.410950\n",
-      "Minibatch accuracy: 8.6%\n",
-      "Validation accuracy: 34.4%\n",
+      "Minibatch loss at step 0: 328.420807\n",
+      "Minibatch accuracy: 11.7%\n",
+      "Validation accuracy: 28.0%\n",
       "Minibatch loss at step 500: 0.000000\n",
       "Minibatch accuracy: 100.0%\n",
-      "Validation accuracy: 77.5%\n",
+      "Validation accuracy: 76.5%\n",
       "Minibatch loss at step 1000: 0.000000\n",
       "Minibatch accuracy: 100.0%\n",
-      "Validation accuracy: 77.5%\n",
+      "Validation accuracy: 76.5%\n",
       "Minibatch loss at step 1500: 0.000000\n",
       "Minibatch accuracy: 100.0%\n",
-      "Validation accuracy: 77.5%\n",
+      "Validation accuracy: 76.5%\n",
       "Minibatch loss at step 2000: 0.000000\n",
       "Minibatch accuracy: 100.0%\n",
-      "Validation accuracy: 77.5%\n",
+      "Validation accuracy: 76.5%\n",
       "Minibatch loss at step 2500: 0.000000\n",
       "Minibatch accuracy: 100.0%\n",
-      "Validation accuracy: 77.5%\n",
+      "Validation accuracy: 76.5%\n",
       "Minibatch loss at step 3000: 0.000000\n",
       "Minibatch accuracy: 100.0%\n",
-      "Validation accuracy: 77.5%\n",
-      "Test accuracy: 84.6%\n"
+      "Validation accuracy: 76.5%\n",
+      "Test accuracy: 84.2%\n"
      ]
     }
    ],
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,6 @@
     "    tf_train_dataset = tf.placeholder(tf.float32,shape = (batch_size,image_size*image_size))\n",
     "    tf_train_labels = tf.placeholder(tf.float32,shape = (batch_size,num_labels))\n",
     "    tf_valid_dataset = tf.constant(valid_dataset)\n",
-    "    tf_valid_labels = tf.constant(valid_labels)\n",
     "    tf_test_dataset = tf.constant(test_dataset)\n",
     "    \n",
     "    #weights and biases\n",
@@ -532,7 +531,10 @@
     "    optimizer = tf.train.GradientDescentOptimizer(0.5).minimize(loss)\n",
     "    \n",
     "    #predict\n",
-    "    train_prediction = tf.nn.softmax(logits)\n",
+    "    #train_prediction = tf.nn.softmax(logits)\n",
+    "    #很多人也用这一个，相当于对抽出来的用子网络计算准确率，如果神经网络较为复杂，这么做比较节省代码，不过用哪个预测都不影响测试结果\n",
+    "    lay1_train = tf.nn.relu(tf.matmul(tf_train_dataset,weights1)+biases1)\n",
+    "    train_prediction = tf.nn.softmax(tf.matmul(lay1_train,weights2)+biases2) \n",
     "    \n",
     "    lay1_valid = tf.nn.relu(tf.matmul(tf_valid_dataset, weights1) + biases1) \n",
     "    valid_prediction = tf.nn.softmax(tf.matmul(lay1_valid, weights2) + biases2)\n",
@@ -543,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -551,28 +553,28 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Minibatch loss at step 0: 482.961578\n",
-      "Minibatch accuracy: 8.6%\n",
-      "Validation accuracy: 21.3%\n",
-      "Minibatch loss at step 500: 0.000000\n",
+      "Minibatch loss at step 0: 385.426453\n",
+      "Minibatch accuracy: 12.5%\n",
+      "Validation accuracy: 24.5%\n",
+      "Minibatch loss at step 500: 0.008738\n",
       "Minibatch accuracy: 100.0%\n",
-      "Validation accuracy: 79.7%\n",
+      "Validation accuracy: 80.0%\n",
       "Minibatch loss at step 1000: 0.000000\n",
       "Minibatch accuracy: 100.0%\n",
-      "Validation accuracy: 80.1%\n",
-      "Minibatch loss at step 1500: 0.061399\n",
-      "Minibatch accuracy: 99.2%\n",
-      "Validation accuracy: 79.8%\n",
-      "Minibatch loss at step 2000: 0.000000\n",
+      "Validation accuracy: 80.0%\n",
+      "Minibatch loss at step 1500: 0.000000\n",
       "Minibatch accuracy: 100.0%\n",
-      "Validation accuracy: 79.8%\n",
-      "Minibatch loss at step 2500: 0.000000\n",
+      "Validation accuracy: 79.7%\n",
+      "Minibatch loss at step 2000: 0.184397\n",
       "Minibatch accuracy: 100.0%\n",
       "Validation accuracy: 79.9%\n",
+      "Minibatch loss at step 2500: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 80.0%\n",
       "Minibatch loss at step 3000: 0.000000\n",
       "Minibatch accuracy: 100.0%\n",
       "Validation accuracy: 80.2%\n",
-      "Test accuracy: 87.3%\n"
+      "Test accuracy: 87.1%\n"
      ]
     }
    ],
@@ -633,6 +635,156 @@
     " \n",
     " ---\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 第一种方法，增加一个隐藏层"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "batch_size = 128\n",
+    "num_hidden_layer = 1024\n",
+    "\n",
+    "graph = tf.Graph()\n",
+    "with graph.as_default():\n",
+    "    \n",
+    "    #Input data\n",
+    "    tf_train_dataset = tf.placeholder(tf.float32,shape = (batch_size,image_size*image_size))\n",
+    "    tf_train_labels = tf.placeholder(tf.float32,shape = (batch_size,num_labels))\n",
+    "    tf_lambda = tf.placeholder(tf.float32)\n",
+    "    tf_valid_dataset = tf.constant(valid_dataset)\n",
+    "    tf_test_dataset = tf.constant(test_dataset)\n",
+    "    \n",
+    "    #weights and biases\n",
+    "    weights1 = tf.Variable(tf.truncated_normal([image_size*image_size,num_hidden_layer],stddev=1 / math.sqrt(float(image_size * image_size))))\n",
+    "    biases1 = tf.Variable(tf.zeros([num_hidden_layer]))\n",
+    "    weights2 = tf.Variable(tf.truncated_normal([num_hidden_layer,num_hidden_layer],stddev=1 / math.sqrt(float(image_size * image_size))))\n",
+    "    biases2 = tf.Variable(tf.zeros([num_hidden_layer]))\n",
+    "    weights3 = tf.Variable(tf.truncated_normal([num_hidden_layer,num_labels],stddev=1 / math.sqrt(float(image_size * image_size))))\n",
+    "    biases3 = tf.Variable(tf.zeros([num_labels]))\n",
+    "    \n",
+    "    \n",
+    "    #set nureal nerwork graph\n",
+    "    lay1 = tf.nn.relu(tf.matmul(tf_train_dataset,weights1)+biases1)\n",
+    "    lay2 = tf.nn.relu(tf.matmul(lay1,weights2)+biases2)\n",
+    "    logits = tf.matmul(lay2,weights3)+biases3\n",
+    "    loss = tf.reduce_mean(\n",
+    "        tf.nn.softmax_cross_entropy_with_logits_v2(labels = tf_train_labels,logits = logits))+tf_lambda*(tf.nn.l2_loss(weights1)+tf.nn.l2_loss(weights2)+tf.nn.l2_loss(weights3))\n",
+    "    \n",
+    "    #optimizer\n",
+    "    optimizer = tf.train.GradientDescentOptimizer(0.5).minimize(loss)\n",
+    "    \n",
+    "    #predict\n",
+    "    #这里直接使用子网络计算训练集准确度\n",
+    "    train_prediction = tf.nn.softmax(logits)\n",
+    "    \n",
+    "    lay1_valid = tf.nn.relu(tf.matmul(tf_valid_dataset, weights1) + biases1)\n",
+    "    lay2_valid = tf.nn.relu(tf.matmul(lay1_valid, weights2) + biases2)\n",
+    "    valid_prediction = tf.nn.softmax(tf.matmul(lay2_valid, weights3) + biases3)\n",
+    "    \n",
+    "    lay1_test = tf.nn.relu(tf.matmul(tf_test_dataset, weights1) + biases1)\n",
+    "    lay2_test = tf.nn.relu(tf.matmul(lay1_test, weights2) + biases2)\n",
+    "    test_prediction = tf.nn.softmax(tf.matmul(lay2_test, weights3) + biases3)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialized\n",
+      "Minibatch loss at step 0: 2.625326\n",
+      "Minibatch accuracy: 5.5%\n",
+      "Validation accuracy: 35.3%\n",
+      "Minibatch loss at step 500: 0.605047\n",
+      "Minibatch accuracy: 89.8%\n",
+      "Validation accuracy: 86.3%\n",
+      "Minibatch loss at step 1000: 0.689763\n",
+      "Minibatch accuracy: 86.7%\n",
+      "Validation accuracy: 86.9%\n",
+      "Minibatch loss at step 1500: 0.458381\n",
+      "Minibatch accuracy: 92.2%\n",
+      "Validation accuracy: 88.3%\n",
+      "Minibatch loss at step 2000: 0.448060\n",
+      "Minibatch accuracy: 93.8%\n",
+      "Validation accuracy: 88.7%\n",
+      "Minibatch loss at step 2500: 0.503647\n",
+      "Minibatch accuracy: 89.1%\n",
+      "Validation accuracy: 88.9%\n",
+      "Minibatch loss at step 3000: 0.501823\n",
+      "Minibatch accuracy: 89.1%\n",
+      "Validation accuracy: 89.1%\n",
+      "Test accuracy: 94.9%\n"
+     ]
+    }
+   ],
+   "source": [
+    "#经过测试，tf_lambda取3e-04是较好的\n",
+    "num_steps = 3001\n",
+    "\n",
+    "with tf.Session(graph=graph) as session:\n",
+    "    tf.global_variables_initializer().run()\n",
+    "    print(\"Initialized\")\n",
+    "    for step in range(num_steps):\n",
+    "    # Pick an offset within the training data, which has been randomized.\n",
+    "    # Note: we could use better randomization across epochs.\n",
+    "        offset = (step * batch_size) % (train_labels.shape[0] - batch_size)\n",
+    "    # Generate a minibatch.\n",
+    "        batch_data = train_dataset[offset:(offset + batch_size), :]\n",
+    "        batch_labels = train_labels[offset:(offset + batch_size), :]\n",
+    "    # Prepare a dictionary telling the session where to feed the minibatch.\n",
+    "    # The key of the dictionary is the placeholder node of the graph to be fed,\n",
+    "    # and the value is the numpy array to feed to it.\n",
+    "        feed_dict = {tf_train_dataset : batch_data, tf_train_labels : batch_labels,tf_lambda:3e-04}\n",
+    "        _,l, predictions = session.run(\n",
+    "        [optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
+    "        if(step % 500 == 0):\n",
+    "            print(\"Minibatch loss at step %d: %f\" % (step, l))\n",
+    "            print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
+    "            print(\"Validation accuracy: %.1f%%\" % accuracy(\n",
+    "            valid_prediction.eval(), valid_labels))\n",
+    "    print(\"Test accuracy: %.1f%%\" % accuracy(test_prediction.eval(), test_labels))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "这里做了一些改进，首先，学习率不能像之前那么大，否则可能引起不收敛，loss值出现nan，或者收敛但结果不好。其次，在变量初始化的时候做了修改，截尾正态分布的标准差不再为1，如果为1，也会出现nan"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 第二种方法，learning rate decay"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "先占坑，回头来填"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
