modify homework 9 again and again

--- a/Assignments/lesson-09/3_regularization.ipynb
+++ b/Assignments/lesson-09/3_regularization.ipynb
@@ -640,7 +640,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 第一种方法，增加一个隐藏层"
+    "- 第一种方法，增加一个隐藏层,正则化防止过拟合"
    ]
   },
   {
@@ -769,22 +769,144 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 第二种方法，learning rate decay"
+    "- 第二种方法，增加一个隐藏层，同时learning rate decay,即不断衰减学习率，正则化防止过拟合"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "batch_size = 128\n",
+    "num_hidden_layer = 1024\n",
+    "\n",
+    "graph = tf.Graph()\n",
+    "with graph.as_default():\n",
+    "    \n",
+    "    #Input data\n",
+    "    tf_train_dataset = tf.placeholder(tf.float32,shape = (batch_size,image_size*image_size))\n",
+    "    tf_train_labels = tf.placeholder(tf.float32,shape = (batch_size,num_labels))\n",
+    "    tf_lambda = tf.placeholder(tf.float32)\n",
+    "    tf_valid_dataset = tf.constant(valid_dataset)\n",
+    "    tf_test_dataset = tf.constant(test_dataset)\n",
+    "    \n",
+    "    #weights and biases\n",
+    "    weights1 = tf.Variable(tf.truncated_normal([image_size*image_size,num_hidden_layer],stddev=1 / math.sqrt(float(image_size * image_size))))\n",
+    "    biases1 = tf.Variable(tf.zeros([num_hidden_layer]))\n",
+    "    weights2 = tf.Variable(tf.truncated_normal([num_hidden_layer,num_hidden_layer],stddev=1 / math.sqrt(float(image_size * image_size))))\n",
+    "    biases2 = tf.Variable(tf.zeros([num_hidden_layer]))\n",
+    "    weights3 = tf.Variable(tf.truncated_normal([num_hidden_layer,num_labels],stddev=1 / math.sqrt(float(image_size * image_size))))\n",
+    "    biases3 = tf.Variable(tf.zeros([num_labels]))\n",
+    "    \n",
+    "    \n",
+    "    #set nureal nerwork graph\n",
+    "    lay1 = tf.nn.relu(tf.matmul(tf_train_dataset,weights1)+biases1)\n",
+    "    lay2 = tf.nn.relu(tf.matmul(lay1,weights2)+biases2)\n",
+    "    logits = tf.matmul(lay2,weights3)+biases3\n",
+    "    loss = tf.reduce_mean(\n",
+    "        tf.nn.softmax_cross_entropy_with_logits_v2(labels = tf_train_labels,logits = logits))+tf_lambda*(tf.nn.l2_loss(weights1)+tf.nn.l2_loss(weights2)+tf.nn.l2_loss(weights3))\n",
+    "    \n",
+    "    #learning rare decay\n",
+    "    #optimizer\n",
+    "    global_step = tf.Variable(0, trainable=False)\n",
+    "    learning_rate = tf.train.exponential_decay(0.5,global_step,100, 0.9, staircase=True)\n",
+    "\n",
+    "    optimizer = tf.train.GradientDescentOptimizer(learning_rate).minimize(loss,global_step = global_step)\n",
+    "    \n",
+    "    #predict\n",
+    "    #这里直接使用子网络计算训练集准确度\n",
+    "    train_prediction = tf.nn.softmax(logits)\n",
+    "    \n",
+    "    lay1_valid = tf.nn.relu(tf.matmul(tf_valid_dataset, weights1) + biases1)\n",
+    "    lay2_valid = tf.nn.relu(tf.matmul(lay1_valid, weights2) + biases2)\n",
+    "    valid_prediction = tf.nn.softmax(tf.matmul(lay2_valid, weights3) + biases3)\n",
+    "    \n",
+    "    lay1_test = tf.nn.relu(tf.matmul(tf_test_dataset, weights1) + biases1)\n",
+    "    lay2_test = tf.nn.relu(tf.matmul(lay1_test, weights2) + biases2)\n",
+    "    test_prediction = tf.nn.softmax(tf.matmul(lay2_test, weights3) + biases3)    "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "先占坑，回头来填"
+    "num_step增加到10001"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialized\n",
+      "Minibatch loss at step 0: 2.587347\n",
+      "Minibatch accuracy: 13.3%\n",
+      "Validation accuracy: 37.4%\n",
+      "Minibatch loss at step 1000: 0.682737\n",
+      "Minibatch accuracy: 86.7%\n",
+      "Validation accuracy: 87.4%\n",
+      "Minibatch loss at step 2000: 0.464757\n",
+      "Minibatch accuracy: 93.0%\n",
+      "Validation accuracy: 88.8%\n",
+      "Minibatch loss at step 3000: 0.552345\n",
+      "Minibatch accuracy: 89.8%\n",
+      "Validation accuracy: 89.1%\n",
+      "Minibatch loss at step 4000: 0.503293\n",
+      "Minibatch accuracy: 93.0%\n",
+      "Validation accuracy: 89.2%\n",
+      "Minibatch loss at step 5000: 0.573949\n",
+      "Minibatch accuracy: 90.6%\n",
+      "Validation accuracy: 89.3%\n",
+      "Minibatch loss at step 6000: 0.641162\n",
+      "Minibatch accuracy: 86.7%\n",
+      "Validation accuracy: 89.3%\n",
+      "Minibatch loss at step 7000: 0.597827\n",
+      "Minibatch accuracy: 88.3%\n",
+      "Validation accuracy: 89.3%\n",
+      "Minibatch loss at step 8000: 0.688831\n",
+      "Minibatch accuracy: 84.4%\n",
+      "Validation accuracy: 89.3%\n",
+      "Minibatch loss at step 9000: 0.605477\n",
+      "Minibatch accuracy: 89.1%\n",
+      "Validation accuracy: 89.3%\n",
+      "Minibatch loss at step 10000: 0.528980\n",
+      "Minibatch accuracy: 90.6%\n",
+      "Validation accuracy: 89.3%\n",
+      "Test accuracy: 95.2%\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_steps = 10001\n",
+    "\n",
+    "with tf.Session(graph=graph) as session:\n",
+    "    tf.global_variables_initializer().run()\n",
+    "    print(\"Initialized\")\n",
+    "    for step in range(num_steps):\n",
+    "    # Pick an offset within the training data, which has been randomized.\n",
+    "    # Note: we could use better randomization across epochs.\n",
+    "        offset = (step * batch_size) % (train_labels.shape[0] - batch_size)\n",
+    "    # Generate a minibatch.\n",
+    "        batch_data = train_dataset[offset:(offset + batch_size), :]\n",
+    "        batch_labels = train_labels[offset:(offset + batch_size), :]\n",
+    "    # Prepare a dictionary telling the session where to feed the minibatch.\n",
+    "    # The key of the dictionary is the placeholder node of the graph to be fed,\n",
+    "    # and the value is the numpy array to feed to it.\n",
+    "        feed_dict = {tf_train_dataset : batch_data, tf_train_labels : batch_labels,tf_lambda:3e-04}\n",
+    "        _,l, predictions = session.run([optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
+    "        if(step % 1000 == 0):\n",
+    "            print(\"Minibatch loss at step %d: %f\" % (step, l))\n",
+    "            print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
+    "            print(\"Validation accuracy: %.1f%%\" % accuracy(\n",
+    "            valid_prediction.eval(), valid_labels))\n",
+    "    print(\"Test accuracy: %.1f%%\" % accuracy(test_prediction.eval(), test_labels))"
+   ]
   }
  ],
  "metadata": {
